src/app/admin/mod-queue/admin-mod-queue.component.scss
.admin-mod-queue {
	margin: 2em;

	.hidden-emote-list {
		.hidden-emote { 
			width: 100%; 
			display: flex;

			.emote-display {
				display: flex;
				align-items: center;
				height: 64px;
				height: 64px;
				margin-bottom: .33em;
				margin-top: .33em;
				width: 100%;
				cursor: pointer;

				img {
					margin-right: 1em;
					width: 64px;
				}

				span {
					display: flex;
					flex-direction: column;
					margin-top: 4px;
				}
			}
			.user-column-divider {
				height: 5px;
			}

			.emote-actions {
				justify-self: flex-end;
				justify-content: end;
				display: flex;
				flex-direction: row;
				align-items: center;
			}
		}
	}
}

